k8s/ingress/catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-resource
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - heracles-store.com
    secretName: heracles-store-tls
  rules:
    - host: heracles-store.com
      http:
        paths:
          - path: "/api/catalog/"
            pathType: Prefix
            backend:
              service:
                name: catalog-api-clusterip
                port:
                  number: 80
