k8s/ingress/identity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-resource
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - heracles-store.com
    secretName: heracles-store-tls
  rules:
    - host: heracles-store.com
      http:
        paths:
          - path: "/api/auth"
            pathType: Prefix
            backend: 
              service: 
                name: identity-api-clusterip
                port:
                  number: 80
